--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "font-awesome": "^4.7.0",
     "material-ui": "^0.18.1",
+    "material-ui-image": "^1.4.1",
     "react": "^15.5.4",
     "react-dom": "^15.6.1",
     "react-tap-event-plugin": "^2.0.1"
