--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "material-ui-image": "^1.4.1",
     "react": "^15.5.4",
     "react-dom": "^15.6.1",
+    "react-scrollchor": "^4.0.0",
+    "react-sticky": "^6.0.1",
     "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
